--- a/website/css/bootstrap.css
+++ b/website/css/bootstrap.css
@@ -85,9 +85,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+    margin: 1cm 2cm 1cm 2cm;
 }
+
 
 abbr[title],
 abbr[data-original-title] {
